--- a/public/about_page/about.html
+++ b/public/about_page/about.html
@@ -116,7 +116,6 @@
                         <a href="mailto:abhijitkashyap97@gmail.com"><i class="fa-solid fa-envelope"></i></a>
                     </div>
                 </div>
-                
                 <div class="namecard hidden">
                     <img src="./files/Aman - Aman Choudhary (1).jpg" alt="Aman Choudhary" class="photo">
                     <div class="info">
@@ -152,6 +151,31 @@
                         <a href="https://www.instagram.com/vishwanath_dorlikar/"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/vishwanath-dorlikar-715555243/"><i class="fab fa-linkedin"></i></a>
                         <a href="mailto:ee210002029@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
+                    </div>
+                </div>
+                <div class="namecard hidden">
+                    <img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1734878531/ecobuqkneyyawgdcevqd.jpg" alt="Sarthak Nandre" class="photo">
+                    <div class="info">
+                        <div class="name">Sarthak Nandre</div>
+                        <div class="position">Ex Club Head</div>
+                    </div>
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/sarthak_nandre31/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/snandre/"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:ee210002067@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
+                    </div>
+                </div>
+
+                <div class="namecard hidden">
+                    <img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1734878532/lqx6vgkcewn30albhfsc.jpg" alt="Atiharsh Bhatt" class="photo">
+                    <div class="info">
+                        <div class="name">Atiharsh Bhatt</div>
+                        <div class="position">Creatives Head</div>
+                    </div>
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/atiharshbhatt/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/atiharsh-bhatt-9524812aa/"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:mems230005008@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
                     </div>
                 </div>
                 <div class="namecard hidden">
@@ -288,6 +312,18 @@
                         <a href="https://www.instagram.com/ayush_manvatkar/"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/ayush-manwatkar/"><i class="fab fa-linkedin"></i></a>
                         <a href="mailto:me220003017@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
+                    </div>
+                </div>
+                <div class="namecard hidden">
+                    <img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1734878531/ehqygwtmlfkqngorcnt7.png" alt="Aditya" class="photo">
+                    <div class="info">
+                        <div class="name">Aditya Singh</div>
+                        <div class="position">Ex eSports Head💦🫄🏻</div>
+                    </div>
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/carlos_smitten/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/aditya-singh-a88a34262?"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:ee220002003@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
                     </div>
                 </div>
                 
