--- a/public/about_page/about.html
+++ b/public/about_page/about.html
@@ -117,6 +117,30 @@
                     </div>
                 </div>
                 <div class="namecard hidden">
+                    <img src="https://res.cloudinary.com/duf3hruwc/image/upload/v1734700761/WhatsApp_Image_2024-12-18_at_10.21.51_9fce6d2c_vrnz3j.jpg" alt="Vishwanath" class="photo">
+                    <div class="info">
+                        <div class="name">Vishwanath</div>
+                        <div class="position">Ex Co-Head</div>
+                    </div>
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/vishwanath_dorlikar/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/vishwanath-dorlikar-715555243/"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:ee210002029@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
+                    </div>
+                </div>
+                <div class="namecard hidden">
+                    <img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1734878531/ecobuqkneyyawgdcevqd.jpg" alt="Sarthak Nandre" class="photo">
+                    <div class="info">
+                        <div class="name">Sarthak Nandre</div>
+                        <div class="position">Ex Club Head</div>
+                    </div>
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/sarthak_nandre31/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/snandre/"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:ee210002067@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
+                    </div>
+                </div>
+                <div class="namecard hidden">
                     <img src="./files/Aman - Aman Choudhary (1).jpg" alt="Aman Choudhary" class="photo">
                     <div class="info">
                         <div class="name">Aman Choudhary</div>
@@ -139,30 +163,6 @@
                         <a href="https://www.instagram.com/drstrox/"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/drstrox/"><i class="fab fa-linkedin"></i></a>
                         <a href="mailto:cse230001001@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
-                    </div>
-                </div>
-                <div class="namecard hidden">
-                    <img src="https://res.cloudinary.com/duf3hruwc/image/upload/v1734700761/WhatsApp_Image_2024-12-18_at_10.21.51_9fce6d2c_vrnz3j.jpg" alt="Vishwanath" class="photo">
-                    <div class="info">
-                        <div class="name">Vishwanath</div>
-                        <div class="position">Ex Co-Head</div>
-                    </div>
-                    <div class="social-links">
-                        <a href="https://www.instagram.com/vishwanath_dorlikar/"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/vishwanath-dorlikar-715555243/"><i class="fab fa-linkedin"></i></a>
-                        <a href="mailto:ee210002029@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
-                    </div>
-                </div>
-                <div class="namecard hidden">
-                    <img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1734878531/ecobuqkneyyawgdcevqd.jpg" alt="Sarthak Nandre" class="photo">
-                    <div class="info">
-                        <div class="name">Sarthak Nandre</div>
-                        <div class="position">Ex Club Head</div>
-                    </div>
-                    <div class="social-links">
-                        <a href="https://www.instagram.com/sarthak_nandre31/"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/snandre/"><i class="fab fa-linkedin"></i></a>
-                        <a href="mailto:ee210002067@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
                     </div>
                 </div>
 
@@ -238,8 +238,7 @@
                         <a href="mailto:ee220002058@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
                     </div>
                 </div>
-
-<div class="namecard hidden">
+            <div class="namecard hidden">
                     <img src="./files/Yash_Baghel - Yash Baghel.jpg" alt="Mike Johnson" class="photo">
                     <div class="info">
                         <div class="name">Yash Baghel</div>
@@ -318,7 +317,7 @@
                     <img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1734878531/ehqygwtmlfkqngorcnt7.png" alt="Aditya" class="photo">
                     <div class="info">
                         <div class="name">Aditya Singh</div>
-                        <div class="position">Ex eSports Head💦🫄🏻</div>
+                        <div class="position">Ex eSports Head</div>
                     </div>
                     <div class="social-links">
                         <a href="https://www.instagram.com/carlos_smitten/"><i class="fab fa-instagram"></i></a>
@@ -326,7 +325,42 @@
                         <a href="mailto:ee220002003@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
                     </div>
                 </div>
-                
+                <div class="namecard hidden">
+                    <img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1734893051/snk0jcpnesv9urz0eoi3.jpg" alt="Hrishikesh" class="photo">
+                    <div class="info">
+                        <div class="name">Hrishikesh Jawale</div>
+                        <div class="position">Core Member</div>
+                    </div>
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/hrjz02/profilecard/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/hrishikesh-jawale?"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:me220003038@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
+                    </div>
+                </div>
+                <div class="namecard hidden">
+                    <img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1734893346/nfwrv3oi53zgnuqukbix.jpg" alt="Rishabh" class="photo">
+                    <div class="info">
+                        <div class="name">Rishabh Sharma</div>
+                        <div class="position">Ex-Marketing Head</div>
+                    </div>
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/rishabh_it_izz/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/rishabhsharma-iiti"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:mems220005042@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
+                    </div>
+                </div>
+                <div class="namecard hidden">
+                    <img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1734893346/b4fgxavnv933th3qkdul.jpg" alt="Yagyaparna" class="photo">
+                    <div class="info">
+                        <div class="name">Yagyaparna Mandwale</div>
+                        <div class="position">Outreach Team</div>
+                    </div>
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/yagyaparna19?igsh=OXF2OG1qYmx2cGd2"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/yagyaparna-mandwale"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:ce230004052@iiti.ac.in"><i class="fa-solid fa-envelope"></i></a>
+                    </div>
+                </div>
             </div>
             <hr style=" border: none;
             height: 2px;
