--- a/public/about_page/about.html
+++ b/public/about_page/about.html
@@ -81,7 +81,6 @@
             <div class="glitch-effect"></div>
         </div>
     </section>
-
     <script>
        AOS.init({
             duration: 1000,
@@ -280,7 +279,7 @@
                     <img src="https://res.cloudinary.com/duf3hruwc/image/upload/v1733853216/psal9gyi7qsls3qp77ul.jpg" alt="Ampady BR" class="photo">
                     <div class="info">
                         <div class="name">Akhilesh Lakhpati</div>
-                        <div class="position">Core Team</div>
+                        <div class="position">Core Member</div>
                     </div>
                     <div class="social-links">
                         <a href="https://www.instagram.com/akhi_lakhs_2111/"><i class="fab fa-instagram"></i></a>
