--- a/public/about_page/about.html
+++ b/public/about_page/about.html
@@ -216,7 +216,7 @@
                 <div class="namecard hidden">
                     <img src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1733930690/zbdqryxvzlfqwvquh8tw.jpg" alt="Aniket" class="photo">
                     <div class="info">
-                        <div class="name">Aniket Tiwari</div>
+                        <div class="name">Aniket  Goyal</div>
                         <div class="position">Publicity Head</div>
                     </div>
                     <div class="social-links">
