GlitchPOP MediaQuery Updated

--- a/public/tournaments/tournaments.html
+++ b/public/tournaments/tournaments.html
@@ -79,14 +79,15 @@
                                 <h1>Glitch</h1>
                             </div>
                             <div class="content">
-                                <h3>Valorant</h3>
+                                <h3 class="content_heading">Valorant</h3>
                                 <p>
                                     Enter the arena of GLITCHPOP 4.0 and
                                     showcase your Valorant skills! Compete
                                     against the best and fight for an impressive
-                                    ₹1,00,000 prize pool. Assemble your team,
-                                    execute your plays, and conquer the
-                                    battlefield! For more details visit click the button
+                                    <b>₹1,00,000 prize pool</b>. Assemble your
+                                    team, execute your plays, and conquer the
+                                    battlefield! For more details visit click
+                                    the button
                                 </p>
                                 <a
                                     href="https://unstop.com/events/glitchpop-40-valorant-championship-fluxus-2025-iit-indore-1395619"
@@ -112,13 +113,14 @@
                                 <h1>Glitch</h1>
                             </div>
                             <div class="content">
-                                <h3>BGMI</h3>
+                                <h3 class="content_heading">BGMI</h3>
                                 <p>
                                     Gear up for the ultimate BGMI showdown at
                                     GLITCHPOP 4.0! Battle it out for glory and
-                                    claim your share of the ₹45,000 prize pool.
-                                    Squad up, strategize, and dominate the
-                                    battlegrounds! For more details visit click the button
+                                    claim your share of the
+                                    <b>₹45,000 prize pool</b>. Squad up,
+                                    strategize, and dominate the battlegrounds!
+                                    For more details visit click the button
                                 </p>
                                 <a
                                     href="https://unstop.com/events/glitchpop-40-bgmi-championship-iit-indore-1395583?lb=9utVUlM&utm_medium=Share&utm_source=WhatsApp"
@@ -143,14 +145,15 @@
                                 <h1>Glitch</h1>
                             </div>
                             <div class="content">
-                                <h3>Clash Royale</h3>
+                                <h3 class="content_heading">Clash Royale</h3>
                                 <p>
                                     Prepare for intense duels in GLITCHPOP 4.0
                                     as Clash Royale takes center stage! Outplay
                                     your opponents and seize victory in a
-                                    ₹20,000 prize pool tournament. Build your
-                                    deck, master your strategy, and claim the
-                                    throne! For more details visit click the button
+                                    <b>₹20,000 prize pool</b> tournament. Build
+                                    your deck, master your strategy, and claim
+                                    the throne! For more details visit click the
+                                    button
                                 </p>
                                 <a
                                     href="https://unstop.com/events/glitchpop-40-clash-royale-championship-fluxus-2025-iit-indore-1395572"
@@ -175,13 +178,15 @@
                                 <h1>Glitch</h1>
                             </div>
                             <div class="content">
-                                <h3>Fifa</h3>
+                                <h3 class="content_heading">Fifa</h3>
                                 <p>
                                     Kick off at GLITCHPOP 4.0 and prove your
                                     dominance in FIFA! Face off against top
-                                    players and battle for a ₹20,000 prize pool.
-                                    Precision, skill, and strategy will decide
-                                    the champion—do you have what it takes? For more details visit click the button 
+                                    players and battle for a
+                                    <b>₹20,000 prize pool</b>. Precision, skill,
+                                    and strategy will decide the champion—do you
+                                    have what it takes? For more details visit
+                                    click the button
                                 </p>
                                 <a
                                     href="https://unstop.com/p/glitchpop-40-fifa-championship-fluxus-2025-iit-indore-1395627?lb=9utVUlM&utm_medium=Share&utm_source=WhatsApp"
@@ -280,7 +285,7 @@
                     ></span>
                 </div>
             </section>
-            <section class="tournament-details" data-aos="fade-up">
+            <!-- <section class="tournament-details" data-aos="fade-up">
                 <div class="container">
                     <h1 class="section-title neon">Avalanche Details*</h1>
                     <div class="details-grid">
@@ -306,7 +311,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <section class="previous-tournaments" data-aos="fade-up">
                 <div class="container">
                     <h2 class="section-title neon">Previous Tournaments</h2>
@@ -388,6 +393,79 @@
                 <div class="container">
                     <h2 class="section-title neon">Upcoming Tournaments</h2>
                     <div class="tournament-grid">
+                        <a
+                            href="https://unstop.com/events/glitchpop-40-valorant-championship-fluxus-2025-iit-indore-1395619"
+                            target="_blank"
+                            ><div class="box">
+                                <div class="card-inner">
+                                    <div class="card-front">
+                                        <img
+                                            src="https://res.cloudinary.com/didezuerl/image/upload/v1739551106/valounstopmobile_rtfh8d.png"
+                                            alt="Poster upcoming"
+                                        />
+                                        <h3>GlitchPop Valorant</h3>
+                                    </div>
+                                    <div class="card-back">
+                                        <h3>GlitchPop Valorant</h3>
+                                        <p>
+                                            Compete in the ultimate Valorant
+                                            battle and fight for glory with a
+                                            massive ₹1,00,000 prize pool.
+                                            Assemble your squad and dominate the
+                                            battlefield!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div></a
+                        >
+                        <a
+                            href="https://unstop.com/o/4lvd3JI?lb=9utVUlM&utm_medium=Share&utm_source=WhatsApp"
+                            target="_blank"
+                            ><div class="box">
+                                <div class="card-inner">
+                                    <div class="card-front">
+                                        <img
+                                            src="https://res.cloudinary.com/didezuerl/image/upload/v1739551106/Unstop_bgmimobile_timahj.png"
+                                        />
+                                        <h3>GlitchPop BGMI</h3>
+                                    </div>
+                                    <div class="card-back">
+                                        <h3>GlitchPop BGMI</h3>
+                                        <p>
+                                            Show off your skills on the virtual
+                                            pitch and compete for a ₹20,000
+                                            prize pool. Precision and strategy
+                                            will decide the champion!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div></a
+                        >
+                        <a
+                            href="https://unstop.com/o/cvdrnoX?lb=9utVUlM&utm_medium=Share&utm_source=WhatsApp"
+                            target="_blank"
+                            ><div class="box">
+                                <div class="card-inner">
+                                    <div class="card-front">
+                                        <img
+                                            src="https://res.cloudinary.com/didezuerl/image/upload/v1739551106/unstopfifamobile_sf9cek.png"
+                                        />
+                                        <h3>GlitchPop FIFA</h3>
+                                    </div>
+                                    <div class="card-back">
+                                        <h3>GlitchPop FIFA</h3>
+                                        <p>
+                                            Show off your skills on the virtual
+                                            pitch and compete for a ₹20,000
+                                            prize pool. Precision and strategy
+                                            will decide the champion!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div></a
+                        >
+                    </div>
+                    <!-- <div class="tournament-grid">
                         <div class="box">
                             <div class="card-inner">
                                 <div class="card-front">
@@ -442,7 +520,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </section>
             <br /><br />
