GlitchPOP MediaQuery Updated

--- a/public/tournaments/tournaments.html
+++ b/public/tournaments/tournaments.html
@@ -393,134 +393,66 @@
                 <div class="container">
                     <h2 class="section-title neon">Upcoming Tournaments</h2>
                     <div class="tournament-grid">
-                        <a
-                            href="https://unstop.com/events/glitchpop-40-valorant-championship-fluxus-2025-iit-indore-1395619"
-                            target="_blank"
-                            ><div class="box">
-                                <div class="card-inner">
-                                    <div class="card-front">
-                                        <img
-                                            src="https://res.cloudinary.com/didezuerl/image/upload/v1739551106/valounstopmobile_rtfh8d.png"
-                                            alt="Poster upcoming"
-                                        />
-                                        <h3>GlitchPop Valorant</h3>
-                                    </div>
-                                    <div class="card-back">
-                                        <h3>GlitchPop Valorant</h3>
-                                        <p>
-                                            Compete in the ultimate Valorant
-                                            battle and fight for glory with a
-                                            massive ₹1,00,000 prize pool.
-                                            Assemble your squad and dominate the
-                                            battlefield!
-                                        </p>
-                                    </div>
+                        <div class="box">
+                            <div class="card-inner">
+                                <div class="card-front">
+                                    <img
+                                        src="https://res.cloudinary.com/didezuerl/image/upload/v1739551106/valounstopmobile_rtfh8d.png"
+                                        alt="Poster upcoming"
+                                    />
+                                    <h3>GlitchPop Valorant</h3>
                                 </div>
-                            </div></a
-                        >
-                        <a
-                            href="https://unstop.com/o/4lvd3JI?lb=9utVUlM&utm_medium=Share&utm_source=WhatsApp"
-                            target="_blank"
-                            ><div class="box">
-                                <div class="card-inner">
-                                    <div class="card-front">
-                                        <img
-                                            src="https://res.cloudinary.com/didezuerl/image/upload/v1739551106/Unstop_bgmimobile_timahj.png"
-                                        />
-                                        <h3>GlitchPop BGMI</h3>
-                                    </div>
-                                    <div class="card-back">
-                                        <h3>GlitchPop BGMI</h3>
-                                        <p>
-                                            Show off your skills on the virtual
-                                            pitch and compete for a ₹20,000
-                                            prize pool. Precision and strategy
-                                            will decide the champion!
-                                        </p>
-                                    </div>
+                                <div class="card-back">
+                                    <h3>GlitchPop Valorant</h3>
+                                    <p>
+                                        Compete in the ultimate Valorant battle
+                                        and fight for glory with a massive
+                                        ₹1,00,000 prize pool. Assemble your
+                                        squad and dominate the battlefield!
+                                    </p>
                                 </div>
-                            </div></a
-                        >
-                        <a
-                            href="https://unstop.com/o/cvdrnoX?lb=9utVUlM&utm_medium=Share&utm_source=WhatsApp"
-                            target="_blank"
-                            ><div class="box">
-                                <div class="card-inner">
-                                    <div class="card-front">
-                                        <img
-                                            src="https://res.cloudinary.com/didezuerl/image/upload/v1739551106/unstopfifamobile_sf9cek.png"
-                                        />
-                                        <h3>GlitchPop FIFA</h3>
-                                    </div>
-                                    <div class="card-back">
-                                        <h3>GlitchPop FIFA</h3>
-                                        <p>
-                                            Show off your skills on the virtual
-                                            pitch and compete for a ₹20,000
-                                            prize pool. Precision and strategy
-                                            will decide the champion!
-                                        </p>
-                                    </div>
+                            </div>
+                        </div>
+
+                        <div class="box">
+                            <div class="card-inner">
+                                <div class="card-front">
+                                    <img
+                                        src="https://res.cloudinary.com/didezuerl/image/upload/v1739551106/Unstop_bgmimobile_timahj.png"
+                                    />
+                                    <h3>GlitchPop BGMI</h3>
                                 </div>
-                            </div></a
-                        >
+                                <div class="card-back">
+                                    <h3>GlitchPop BGMI</h3>
+                                    <p>
+                                        Show off your skills on the virtual
+                                        pitch and compete for a ₹20,000 prize
+                                        pool. Precision and strategy will decide
+                                        the champion!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="box">
+                            <div class="card-inner">
+                                <div class="card-front">
+                                    <img
+                                        src="https://res.cloudinary.com/didezuerl/image/upload/v1739551106/unstopfifamobile_sf9cek.png"
+                                    />
+                                    <h3>GlitchPop FIFA</h3>
+                                </div>
+                                <div class="card-back">
+                                    <h3>GlitchPop FIFA</h3>
+                                    <p>
+                                        Show off your skills on the virtual
+                                        pitch and compete for a ₹20,000 prize
+                                        pool. Precision and strategy will decide
+                                        the champion!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <!-- <div class="tournament-grid">
-                        <div class="box">
-                            <div class="card-inner">
-                                <div class="card-front">
-                                    <img
-                                        src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1733844024/huauze01dwwpgqvid32m.jpg"
-                                        alt="Poster upcoming"
-                                    />
-                                    <h3>Avalanche</h3>
-                                </div>
-                                <div class="card-back">
-                                    <h3>Avalanche</h3>
-                                    <p>
-                                        Avalanche is an upcoming Valorant
-                                        tournament scheduled in January.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="box">
-                            <div class="card-inner">
-                                <div class="card-front">
-                                    <img
-                                        src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1733930499/c2tenskrlideny9k4l4i.jpg"
-                                        alt="Poster upcoming"
-                                    />
-                                    <h3>Kickoff</h3>
-                                </div>
-                                <div class="card-back">
-                                    <h3>FIFA Tournament</h3>
-                                    <p>
-                                        Lock and load for an adrenaline-pumping
-                                        FIFA tournament.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="box">
-                            <div class="card-inner">
-                                <div class="card-front">
-                                    <img
-                                        src="https://res.cloudinary.com/dq2skbvkx/image/upload/v1733844024/btwutcvonymwucmdwrjc.jpg"
-                                        alt="Poster upcoming"
-                                    />
-                                    <h3>Cubewars</h3>
-                                </div>
-                                <div class="card-back">
-                                    <h3>Minecraft Cup</h3>
-                                    <p>
-                                        Mine an extraordinary imagination and
-                                        win the league.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
             </section>
             <br /><br />
