--- a/public/tournaments/tournaments.html
+++ b/public/tournaments/tournaments.html
@@ -393,7 +393,7 @@
                 <div class="container">
                     <h2 class="section-title neon">Upcoming Tournaments</h2>
                     <div class="tournament-grid">
-                        <div class="box">
+                        <div class="box upcomingBox">
                             <div class="card-inner">
                                 <div class="card-front">
                                     <img
@@ -414,7 +414,7 @@
                             </div>
                         </div>
 
-                        <div class="box">
+                        <div class="box upcomingBox">
                             <div class="card-inner">
                                 <div class="card-front">
                                     <img
@@ -433,7 +433,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="box">
+                        <div class="box upcomingBox">
                             <div class="card-inner">
                                 <div class="card-front">
                                     <img
